--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
@@ -8,14 +8,36 @@
   </head>
 
   <body>
-<h1>XavTrav Labs</h1>
-<hr>
-<h4>Welcome to the <em>XavTrav Labs</em> Official Website! Please feel free to browse my current projects!</h4>
-<hr>
+<header>
+  <h1>XavTrav Labs!</h1>
+  <h3>Welcome to my official project site!</h3>
+  <p>
+    Here you will find links to all of my different projects I am working on!
+  </p>
+</header>
 
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Websites</a></li>
+    <li><a href="#">Java</a></li>
+    <li><a href="#">Löve</a></li>
+    <li><a href="#">Other</a></li>
+    <li><a href="#">Hosted By: <br>Github</a></li>
+  </ul>
+</nav>
 
+<section>
+<h1>memes</h1>
+  <footer>Copyright (c) 2016 XavTrav All Rights Reserved.<br>
+          (I don't actually own copyright, this just makes it feel official!)</footer>
+
+</section>
+
+<aside>
+  <h1>Ads Side</h1>
+</aside>
 
   </body>
-
 
 </html>
