--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
   </head>
 
   <body>
-<header>
-  <h1>XavTrav Labs!</h1>
-  <h3>Welcome to my official project site!</h3>
-  <p>
-    Here you will find links to all of my different projects I am working on!
-  </p>
-</header>
+  <header>
+    <h1>XavTrav Labs!</h1>
+    <h3>Welcome to my official project site!</h3>
+    <p>
+      Here you will find links to all of my different projects I am working on!
+    </p>
+  </header>
 
-<nav>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Websites</a></li>
-    <li><a href="#">Java</a></li>
-    <li><a href="#">Löve</a></li>
-    <li><a href="#">Other</a></li>
-    <li><a href="#">Hosted By: <br>Github</a></li>
-  </ul>
-</nav>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Websites</a></li>
+      <li><a href="#">Java</a></li>
+      <li><a href="#">Löve</a></li>
+      <li><a href="#">Other</a></li>
+      <li><a href="#">Hosted By: <br>Github</a></li>
+    </ul>
+  </nav>
 
-<section>
-<h2>memes</h2>
-  <footer>Copyright (c) 2016 XavTrav All Rights Reserved.<br>
-          (I don't actually own copyright, this just makes it feel official!)</footer>
+  <section>
+    <h1><a href="jscript.html"> Javascript Page</a></h1>
+  <h2>memes</h2>
+    <footer>Copyright (c) 2016 XavTrav All Rights Reserved.<br>
+            (I don't actually own copyright, this just makes it feel official!)</footer>
 
-</section>
+  </section>
 
-<aside>
-  <h1>Ads Side</h1>
-</aside>
-
+  <aside>
+    <h1>Ads Side</h1>
+  </aside>
   </body>
 
 </html>
